--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.8",
     "firebase": "^10.7.1",
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
